syntax = "proto3";

package c1.svc.connector_manager.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/ductone/c1-lambda/pb/c1/svc/connector_manager/v1";

service ConnectorManager {
  rpc GetConnectorConfig(GetConnectorConfigRequest) returns (GetConnectorConfigResponse);
}

message GetConnectorConfigRequest {
  Sigv4SignedRequestSTSGetCallerIdentity sigv4SignedRequestSTSGetCallerIdentity = 1;
}

message GetConnectorConfigResponse {
  google.protobuf.Struct config = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message SignedHeader {
  string key = 1;
  repeated string value = 2;
}

message Sigv4SignedRequestSTSGetCallerIdentity {
  string method = 1;
  string endpoint = 2;
  repeated SignedHeader headers = 3;
  bytes body = 4;
}

